--- a/pom.xml
+++ b/pom.xml
@@ -53,8 +53,27 @@
       <artifactId>spring-boot-starter-security</artifactId>
     </dependency>
     <dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-test</artifactId>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-test</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId> com.zaxxer </groupId>
+      <artifactId> HikariCP </artifactId>
+      <version> 2.6.0 </version>
+    </dependency>
+    <dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jdk8</artifactId>
 		</dependency>
   </dependencies>
   <build>
