--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # MySQL
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/ponto_inteligente?serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=
