--- a/pom.xml
+++ b/pom.xml
@@ -98,11 +98,11 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.6.1</version>
 		</dependency>		
-		<!-- EhCache 
+		<!-- EhCache  -->
 		<dependency>
 			<groupId>net.sf.ehcache</groupId>
 			<artifactId>ehcache</artifactId>
-		</dependency> -->
+		</dependency>
   </dependencies> 
   <build>
     <plugins>
